# hyperlog

./: 404.html  Cargo.toml  README.md  example.py  example_auto.py  index.html  mkdocs.yml  omnilog_auto.py  pyproject.toml
.github/workflows/: pages.yml
crates/hyperlog-core/: Cargo.toml
crates/hyperlog-core/src/: config.rs  telemetry.rs
crates/hyperlog-python/: Cargo.toml
crates/hyperlog-python/src/: lib.rs
docs/: _config.yml  index.md
examples/: example.py  example_auto.py  hyperlog_auto.py  telemetry.yaml
python/hyperlog/: __init__.py  auto.py
search/: search_index.json
src/: lib.rs
